--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-carousel-nuxt",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "My new Nuxt module",
   "repository": "gaetansenn/vue3-carousel-nuxt",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run lint && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
     "lint": "eslint ."
   },
   "dependencies": {
