--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-carousel-nuxt",
   "version": "1.1.2",
-  "description": "My new Nuxt module",
+  "description": "Vue 3 Carousel module for Nuxt",
   "repository": "gaetansenn/vue3-carousel-nuxt",
   "license": "MIT",
   "type": "module",
@@ -18,25 +18,28 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build",
+    "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxt/kit": "^3.11.0",
-    "vue3-carousel": "^0.3.3"
+    "@nuxt/kit": "^3.12.4",
+    "vue3-carousel": "^0.3.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.11.1",
-    "@types/node": "^20.11.28",
+    "@nuxt/devtools": "^1.3.9",
+    "@nuxt/eslint-config": "^0.3.13",
+    "@nuxt/module-builder": "^0.8.1",
+    "@nuxt/schema": "^3.12.4",
+    "@types/node": "^20.14.11",
     "changelogen": "^0.5.5",
-    "eslint": "^8.57.0",
-    "nuxt": "^3.11.1"
+    "eslint": "^9.7.0",
+    "nuxt": "^3.12.4",
+    "typescript": "latest",
+    "vitest": "^2.0.3",
+    "vue-tsc": "^2.0.26"
   }
 }
