--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.12.4",
-    "vue3-carousel": "^0.10.0"
+    "vue3-carousel": "^0.13.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.9",
@@ -41,5 +41,6 @@
     "typescript": "latest",
     "vitest": "^2.0.3",
     "vue-tsc": "^2.0.26"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
